--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 *.asv
 field-processing-scripts/check_log_file.txt
 field-processing-scripts/.DS_Store
+field-processing-scripts/check_log_file.txt
+*.txt
