--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-
+#File types
 *.rtf
 *.asv
-*.asv
-field-processing-scripts/check_log_file.txt
-field-processing-scripts/.DS_Store
-field-processing-scripts/check_log_file.txt
-*.txt
 *.DAT
+*.DS_STORE
+
+#File paths
 field-processing-scripts/.DS_Store
-field-processing-scripts/data2022/.DS_Store
-field-processing-scripts/nicholls_utils/.DS_Store
+field-processing-scripts/check_log_file.txt
